--- a/lib/jquery.mobile.structure-1.4.0.css
+++ b/lib/jquery.mobile.structure-1.4.0.css
@@ -3288,6 +3288,7 @@ for Android 4.1 */
 	top:0px;
 	bottom:0px;
 	width:100%;
+	height:100%;
 	min-height: inherit;
 	border: 0;
 	overflow-x: hidden;
